<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_pass">Login Pass</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_online_service">TrueConf Online</string>
    <string name="lib_name">TrueConf</string>
    <string name="app_host">trueconf.com</string>
    <string name="login">Login</string>
    <string name="call_to">Call to</string>
    <string name="action_call">Call</string>
    <string name="msg_empty_login_or_pass">Empty login or pass</string>
    <string name="msg_empty_peer_id">Must not be empty</string>
    <string name="state_no_network">No network</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnected</string>
    <string name="logout">Logout</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="connect">Connect</string>
    <string name="msg_invalid_server_port_value">Invalid server port value</string>
    <string name="msg_invalid_server_value">Invalid server value</string>
    <string name="server_id">TrueConf Server Hostname/IP</string>
    <string name="empty_id">Empty id</string>
    <string name="btnChat">Open chat button</string>
    <string name="btnAudio">Toggle audio button</string>
    <string name="btnCam">Toggle camera button</string>
    <string name="btnMic">Toggle microphone button</string>
    <string name="btnHangup">Hangup</string>
    <string-array name="ip_set">
    </string-array>
</resources>
